--- a/award/templates/award/base.html
+++ b/award/templates/award/base.html
@@ -27,7 +27,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Awwards</a>
+        <a class="navbar-brand" href="#">Awwardz</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
             aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
