--- a/award/templates/registration/login.html
+++ b/award/templates/registration/login.html
@@ -1,32 +1,35 @@
-{% extends "registration/base.html"%}
+{%extends "registration/base.html"%}
 {% load bootstrap4 %}
+{% load static %}
+
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-5">
-            {% if form.errors %}
-            <p>Password or username is incorrect </p>
-            {% endif %}
-            <div class="card">
-                <div class="card-header">
-                    <h3 class="text-center">Sign In</h3>
-                </div>
-                <div class="card-body">
-                    <form action="/accounts/login/?next=/" method="post">
-                        {% csrf_token %}
-                        {% bootstrap_form form%}
-                        <div class="form-group">
-                            <input type="submit" class="btn btn-primary btn-sm" value="Login">
-                        </div>
-                        <p>Don't have an account ? <a href="/accounts/register">Sign Up</a></p>
-                        <p><a href="#">Forgot Password ?</a></p>
-                        <input type="hidden" name="next" value="{{next}}">
-                    </form>
-                </div>
-            </div>
+<div class="container" style="background-image: url(/static/photos/bckgrnd.jpg);">
+  <div class="row">
+    <!-- Empty div -->
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+      {% if form.errors %}
+        <p> Password or Username is incorrect </p>
+      {% endif %}
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="text-center">Sign In</h3>
         </div>
-        <div class="col-md-3"></div>
+        <div class="panel-body">
+          <form  action="/accounts/login/" method="post">
+            {% csrf_token %}
+            {% bootstrap_form form%}
+            <div class="form-group">
+              <input type="submit" class="btn btn-primary btn-sm" value="Login">
+            </div>
+            <input type="hidden" name="next" value="{{next}}">
+          </form>
+          <h3>Click here to register</h3> <button class="btn btn-primary btn-sm"><a href="/accounts/register">Register</a></button>
+        </div>
+      </div>
     </div>
+    <!-- empty div -->
+    <div class="col-md-4"></div>
+  </div>
 </div>
 {% endblock %}
